--- a/views/addProject.hbs
+++ b/views/addProject.hbs
@@ -18,10 +18,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold" aria-current="page" href="addProject.html">Add Project</a>
+                        <a class="nav-link fw-bold" aria-current="page" href="/addProject">Add Project</a>
                     </li>
                 </ul>
                 <button type="button" class="btn btn-dark btn-md">Contact</button>
