--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,10 +17,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link fw-bold" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link fw-bold" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="addProject.html">Add Project</a>
+                        <a class="nav-link" aria-current="page" href="/addProject">Add Project</a>
                     </li>
                 </ul>
                 <button type="button" class="btn btn-dark btn-md">Contact</button>
@@ -44,10 +44,7 @@
                             </div>
                             <div class="mx-5 mt-5">
                                 <button class="card-link btn btn-md btn-dark rounded-5 px-4">Contact</button>
-                                <a href="" class="card-link text-dark text-decoration-none fs-5">
-                                    Download Cv 
-                                    <i class="fa-solid fa-download"></i>
-                                </a>
+                                <a href="" class="card-link text-decoration-none fs-5">Download Cv <i class="fa-solid fa-download"></i></a>
                             </div>
                             <div class="mx-5 mt-5">
                                 <a class="card-link text-decoration-none" href="https://www.linkedin.com/in/rinaldi-rizqi-fauzi-bb779422a/">
@@ -82,70 +79,32 @@
         <div class="card-body" style="background-color: #f8f8f8;">
             <h2 class="text-center fw-bold my-5">My Project</h2>
             <div class="row row-cols-1 row-cols-md-3 g-1">
-                <div class="col">
-                    <div class="card shadow p-3 mb-5 bg-body rounded mx-4">
-                        <img src="https://wallpapercave.com/wp/wp6878772.png" class="card-img-top" style="height: 260px;" style="height: 260px;" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Dumbways - 2024</h5>
-                            <p class="text-muted fs-6">Duration: 3 bulan</p>
-                            <p class="card-text mt-4">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <p class="card-text mt-4">
-                                <i class="fa-brands fa-laravel fa-2x mx-1"></i>
-                                <i class="fa-brands fa-python fa-2x mx-1"></i>
-                                <i class="fa-brands fa-sass fa-2x mx-1"></i>
-                                <i class="fa-brands fa-php fa-2x mx-1"></i>
-                            </p>
-                            <div class="d-flex gap-2 mt-4">
-                                <button class="btn btn-sm btn-dark rounded-3 w-100" type="button">Edit</button>
-                                <button class="btn btn-sm btn-dark rounded-3 w-100" type="button">Delete</button>
+                {{#each data}}
+                    <div class="col">
+                        <div class="card shadow p-3 mb-5 bg-body rounded mx-4">
+                            <img src="{{ this.image }}" class="card-img-top" style="height: 260px;" style="height: 260px;" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ this.title }}</h5>
+                                <p class="text-muted fs-6">Duration: {{ this.duration }}</p>
+                                <p class="card-text mt-4">{{ this.content }}</p>
+                                <p class="card-text mt-4">
+                                    <i class="fa-brands fa-laravel fa-2x mx-1"></i>
+                                    <i class="fa-brands fa-python fa-2x mx-1"></i>
+                                    <i class="fa-brands fa-sass fa-2x mx-1"></i>
+                                    <i class="fa-brands fa-php fa-2x mx-1"></i>
+                                </p>
+                                <div class="d-flex gap-2 mt-4">
+                                    <a href="detail/{{ this.linkTitle }}" target="_blank" class="btn btn-sm btn-dark rounded-3 w-100" type="button">Detail</a>
+                                    <button class="btn btn-sm btn-dark rounded-3 w-100" type="button">Edit</button>
+                                    <button class="btn btn-sm btn-dark rounded-3 w-100" type="button">Delete</button>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow p-3 mb-5 bg-body rounded mx-4">
-                        <img src="https://e1.pxfuel.com/desktop-wallpaper/470/333/desktop-wallpaper-python-logo-python.jpg" class="card-img-top" style="height: 260px;" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Dumbways - 2024</h5>
-                            <p class="text-muted fs-6">Duration: 3 bulan</p>
-                            <p class="card-text mt-4">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <p class="card-text mt-4">
-                                <i class="fa-brands fa-laravel fa-2x mx-1"></i>
-                                <i class="fa-brands fa-python fa-2x mx-1"></i>
-                                <i class="fa-brands fa-sass fa-2x mx-1"></i>
-                                <i class="fa-brands fa-php fa-2x mx-1"></i>
-                            </p>
-                            <div class="d-flex gap-2 mt-4">
-                                <button class="btn btn-sm btn-dark rounded-3 w-100" type="button">Edit</button>
-                                <button class="btn btn-sm btn-dark rounded-3 w-100" type="button">Delete</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow p-3 mb-5 bg-body rounded mx-4">
-                        <img src="https://images.velog.io/images/smat91/post/e1ae5c1d-47b9-4cd1-b7d5-f1c838741306/scss.jpeg" class="card-img-top" style="height: 260px;" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Dumbways - 2024</h5>
-                            <p class="text-muted fs-6">Duration: 3 bulan</p>
-                            <p class="card-text mt-4">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <p class="card-text mt-4">
-                                <i class="fa-brands fa-laravel fa-2x mx-1"></i>
-                                <i class="fa-brands fa-python fa-2x mx-1"></i>
-                                <i class="fa-brands fa-sass fa-2x mx-1"></i>
-                                <i class="fa-brands fa-php fa-2x mx-1"></i>
-                            </p>
-                            <div class="d-flex gap-2 mt-4">
-                                <button class="btn btn-sm btn-dark rounded-3 w-100" type="button">Edit</button>
-                                <button class="btn btn-sm btn-dark rounded-3 w-100" type="button">Delete</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {{/each}}
             </div>
         </div>
     </div>
-    <script src="assets/javascript/day4blogs.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
   </body>
