--- a/views/addProject.hbs
+++ b/views/addProject.hbs
@@ -24,7 +24,7 @@
                         <a class="nav-link fw-bold" aria-current="page" href="/addProject">Add Project</a>
                     </li>
                 </ul>
-                <button type="button" class="btn btn-dark btn-md">Contact</button>
+                <a type="button" href="/contact" class="btn btn-dark btn-md">Contact</a>
             </div>
         </div>
     </nav>
