--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,7 +23,7 @@
                         <a class="nav-link" aria-current="page" href="/addProject">Add Project</a>
                     </li>
                 </ul>
-                <button type="button" class="btn btn-dark btn-md">Contact</button>
+                <a type="button" href="/contact" class="btn btn-dark btn-md">Contact</a>
             </div>
         </div>
     </nav>
