--- a/views/detailProject.hbs
+++ b/views/detailProject.hbs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>D Chapter2 - Detail</title>
+    <title>D Chapter2 - Detail {{ title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
@@ -23,7 +23,7 @@
                         <a class="nav-link" aria-current="page" href="/addProject">Add Project</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold" aria-current="page" href="/detail/{{ project.linkTitle }}">Detail {{ project.linkTitle }}</a>
+                        <a class="nav-link fw-bold" aria-current="page" href="/detail/{{ dataProject.id }}">Detail {{ dataProject.name }}</a>
                     </li>
                 </ul>
                   <a type="button" href="/contact" class="btn btn-dark btn-md">Contact</a>
@@ -31,9 +31,9 @@
         </div>
     </nav>
     <div class="row mt-5 m-5">
-        <h1 class="text-center fw-bold">{{ project.title }}</h1>
+        <h1 class="text-center fw-bold">{{ dataProject.name }}</h1>
         <div class="col-lg-7 col-sm-12 mt-5">
-            <img src="{{ project.image }}" class="img-fluid w-100" style="height: 450px;" alt="{{ project.image }}">
+            <img src="{{ dataProject.imageDefault }}" class="img-fluid w-100" style="height: 450px;" alt="{{ dataProject.imageDefault }}">
         </div>
         <div class="col-lg-5 col-sm-12 mt-5">
             <div class="mx-5">
@@ -41,14 +41,13 @@
                 <div class="d-flex gap-4 align-items-center">
                     <i class="fa-regular fa-calendar-days fa-2x"></i> 
                     <p class="fs-5 mt-3">
-                        {{ project.startDate }} - {{ project.endDate }} 
+                        {{ dataProject.stardate }} - {{ dataProject.enddate }} 
                     </p>
-
                 </div>
                 <div class="d-flex gap-4 align-items-center">
                     <i class="fa-regular fa-clock fa-2x"></i>
                      <p class="fs-5 mt-3">
-                         {{ project.duration }} 
+                         {{ dataProject.vRangeDuration }} {{  dataProject.textDate }}
                     </p>
                 </div>
             </div>
@@ -57,22 +56,30 @@
                 <div class="row mt-4">
                     <div class="col-lg-6 col-sm-6">
                         <div class="d-flex gap-3 align-items-center">
-                            <i class="{{ project.icon1 }} fa-3x"></i>
-                            <p class="text-secondary fw-bolder mt-2">{{ project.tech1 }}</p>
+                            {{#if dataProject.php }}
+                                <i class="fa-brands fa-php fa-2x mx-1"></i>
+                            {{/if }}
+                            <p class="text-secondary fw-bolder mt-2">{{ dataProject.php }}</p>
                         </div>
                         <div class="d-flex gap-3 align-items-center mt-3">
-                            <i class="{{ project.icon2 }} fa-3x"></i>
-                            <p class="text-secondary fw-bolder mt-2">{{ project.tech2 }}</p>
+                            {{#if dataProject.laravel }}
+                                <i class="fa-brands fa-laravel fa-2x mx-1"></i>
+                            {{/if }}
+                            <p class="text-secondary fw-bolder mt-2">{{ dataProject.laravel }}</p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-sm-6">
                         <div class="d-flex gap-3 align-items-center">
-                            <i class="{{ project.icon3 }} fa-3x"></i>
-                            <p class="text-secondary fw-bolder mt-2">{{ project.tech3 }}</p>
+                            {{#if dataProject.sass }}
+                                <i class="fa-brands fa-sass fa-2x mx-1"></i>
+                            {{/if }}
+                            <p class="text-secondary fw-bolder mt-2">{{ dataProject.sass }}</p>
                         </div>
                         <div class="d-flex gap-3 align-items-center mt-3">
-                            <i class="{{ project.icon4 }} fa-3x"></i>
-                            <p class="text-secondary fw-bolder mt-2">{{ project.tech4 }}</p>
+                            {{#if dataProject.python }}
+                                <i class="fa-brands fa-python fa-2x mx-1"></i>
+                            {{/if }}
+                            <p class="text-secondary fw-bolder mt-2">{{ dataProject.python }}</p>
                         </div>
                     </div>
                 </div>
@@ -82,7 +89,7 @@
     </div>
     <div class="row mt-5 m-5">
         <p class="mx-1">
-           {{ project.content }}
+           {{ dataProject.description }}
         </p>
     </div>
 
