--- a/views/editProject.hbs
+++ b/views/editProject.hbs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>D Chapter2 - {{ title}}</title>
+    <title>D Chapter2 - Edit {{ title}}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
@@ -21,48 +21,51 @@
                         <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold" aria-current="page" href="/addProject">Add Project</a>
+                        <a class="nav-link" aria-current="page" href="/addProject">Add Project</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fw-bold" aria-current="page" href="{{ id }}">Edit {{ dataProject.name }}</a>
                     </li>
                 </ul>
                 <a type="button" href="/contact" class="btn btn-dark btn-md">Contact</a>
             </div>
         </div>
     </nav>
-    <h3 class="text-center mt-4 fw-bold">ADD MY PROJECT</h3>
+    <h3 class="text-center mt-4 fw-bold">Edit {{  dataProject.name }}</h3>
     <section class="contact">
         <div class="container mt-4 w-50">
             <div class="row">
-                <form action="/post-project" method="POST">
+                <form action="/update-project/{{ dataProject.id }}" method="POST">
                     <div class="mb-3">
                         <label for="name" class="form-label fw-bolder" for="name">Project Name</label>
-                        <input type="name" class="form-control shadow bg-body rounded" name="name" id="name"  placeholder="Enter...">
+                        <input type="name" class="form-control shadow bg-body rounded" name="name" id="name" value="{{ dataProject.name }}"  placeholder="Enter...">
                     </div>
                     <div class="row">
                         <div class="col">
                             <label class="form-label fw-bolder" for="star-date">Star Date</label>
-                            <input type="date" class="form-control shadow bg-body rounded" name="stardate" id="star-date">
+                            <input type="date" class="form-control shadow bg-body rounded" name="stardate" id="star-date" value="{{ dataProject.stardate }}">
                         </div>
                         <div class="col">
                             <label class="form-label fw-bolder" for="end-date">End Date</label>
-                            <input type="date" class="form-control shadow bg-body rounded" name="enddate" id="end-date">
+                            <input type="date" class="form-control shadow bg-body rounded" name="enddate" id="end-date" value="{{ dataProject.enddate }}">
                         </div>
                     </div>
                     <div class="mt-3">
                         <label for="description" class="form-label fw-bolder">Description</label>
-                        <textarea class="form-control shadow bg-body rounded" name="description" id="description" rows="4">Enter...</textarea>
+                        <textarea class="form-control shadow bg-body rounded" name="description" id="description" rows="4">{{ dataProject.description }}</textarea>
                     </div>
                     <div class="mt-3">
                         <div class="row">
                             <label for="description" class="form-label fw-bolder">Technology</label>
                             <div class="col">
                                 <div class="form-check">
-                                    <input class="form-check-input shadow-lg" type="checkbox" name="laravel" value="laravel" id="laravel">
+                                    <input class="form-check-input shadow-lg" type="checkbox" name="laravel" value="laravel" id="laravel" {{ this.checkedlaravel }}>
                                     <label class="form-check-label" for="laravel">
                                         Laravel
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input shadow-lg" type="checkbox" name="python" value="python" id="python">
+                                    <input class="form-check-input shadow-lg" type="checkbox" name="python" value="python" id="python" {{ this.checkedpython }}>
                                     <label class="form-check-label" for="python">
                                         Python
                                     </label>
@@ -70,13 +73,13 @@
                             </div>
                             <div class="col">
                                 <div class="form-check">
-                                    <input class="form-check-input shadow-lg" type="checkbox" name="php" value="php" id="php">
+                                    <input class="form-check-input shadow-lg" type="checkbox" name="php" value="php" id="php" {{ this.checkedphp }}>
                                     <label class="form-check-label" for="php">
                                         PHP
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input shadow-lg" type="checkbox" name="sass" value="sass" id="sass">
+                                    <input class="form-check-input shadow-lg" type="checkbox" name="sass" value="sass" id="sass" {{ this.checkedsass }}>
                                     <label class="form-check-label" for="sass">
                                         Sass
                                     </label>
