--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>D Chapter2 - Home</title>
+    <title>D Chapter2 - {{title}}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
@@ -82,21 +82,29 @@
                 {{#each data}}
                     <div class="col">
                         <div class="card shadow p-3 mb-5 bg-body rounded mx-4">
-                            <img src="{{ this.image }}" class="card-img-top" style="height: 260px;" style="height: 260px;" alt="...">
+                            <img src="{{ this.imageDefault }}" class="card-img-top" style="height: 260px;" style="height: 260px;" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">{{ this.title }}</h5>
-                                <p class="text-muted fs-6">Duration: {{ this.duration }}</p>
-                                <p class="card-text mt-4">{{ this.content }}</p>
+                                <h5 class="card-title">{{ this.name }}</h5> 
+                                <p class="text-muted fs-6">Duration: {{ this.vRangeDuration }} {{ this.textDate }}</p>
+                                <p class="card-text mt-4">{{ this.description }}</p>
                                 <p class="card-text mt-4">
-                                    <i class="fa-brands fa-laravel fa-2x mx-1"></i>
-                                    <i class="fa-brands fa-python fa-2x mx-1"></i>
-                                    <i class="fa-brands fa-sass fa-2x mx-1"></i>
-                                    <i class="fa-brands fa-php fa-2x mx-1"></i>
+                                    {{#if this.laravel }}
+                                        <i class="fa-brands fa-laravel fa-2x mx-1"></i>
+                                    {{/if }}
+                                    {{#if this.python }}
+                                        <i class="fa-brands fa-python fa-2x mx-1"></i>
+                                    {{/if }}
+                                    {{#if this.sass }}
+                                        <i class="fa-brands fa-sass fa-2x mx-1"></i>
+                                    {{/if }}
+                                    {{#if this.php }}
+                                        <i class="fa-brands fa-php fa-2x mx-1"></i>
+                                    {{/if }}
                                 </p>
                                 <div class="d-flex gap-2 mt-4">
-                                    <a href="detail/{{ this.linkTitle }}" target="_blank" class="btn btn-sm btn-dark rounded-3 w-100" type="button">Detail</a>
-                                    <button class="btn btn-sm btn-dark rounded-3 w-100" type="button">Edit</button>
-                                    <button class="btn btn-sm btn-dark rounded-3 w-100" type="button">Delete</button>
+                                    <a href="detail/{{ @index }}" target="_blank" class="btn btn-sm btn-dark rounded-3 w-100" type="button">Detail</a>
+                                    <a href="edit-project/{{ @index }}" class="btn btn-sm btn-dark rounded-3 w-100" type="button">Edit</a>
+                                    <a href="delete-project/{{ @index }}" class="btn btn-sm btn-dark rounded-3 w-100" type="button">Delete</a>
                                 </div>
                             </div>
                         </div>
