modify array of object manipulation clear commit

--- a/views/detailProject.hbs
+++ b/views/detailProject.hbs
@@ -31,7 +31,7 @@
         </div>
     </nav>
     <div class="row mt-5 m-5">
-        <h1 class="text-center fw-bold">{{ dataProject.name }}</h1>
+        <h1 class="text-center fw-bold">{{ dataProject.name }} {{ dataProject.id }}</h1>
         <div class="col-lg-7 col-sm-12 mt-5">
             <img src="{{ dataProject.imageDefault }}" class="img-fluid w-100" style="height: 450px;" alt="{{ dataProject.imageDefault }}">
         </div>
@@ -41,7 +41,7 @@
                 <div class="d-flex gap-4 align-items-center">
                     <i class="fa-regular fa-calendar-days fa-2x"></i> 
                     <p class="fs-5 mt-3">
-                        {{ dataProject.stardate }} - {{ dataProject.enddate }} 
+                        {{  dataProject.stardate }} - {{ dataProject.enddate }} 
                     </p>
                 </div>
                 <div class="d-flex gap-4 align-items-center">
