--- a/views/index.hbs
+++ b/views/index.hbs
@@ -102,7 +102,7 @@
                                     {{/if }}
                                 </p>
                                 <div class="d-flex gap-2 mt-4">
-                                    <a href="detail/{{ @index }}" target="_blank" class="btn btn-sm btn-dark rounded-3 w-100" type="button">Detail</a>
+                                    <a href="detail/{{ this.id }}" target="_blank" class="btn btn-sm btn-dark rounded-3 w-100" type="button">Detail</a>
                                     <a href="edit-project/{{ @index }}" class="btn btn-sm btn-dark rounded-3 w-100" type="button">Edit</a>
                                     <a href="delete-project/{{ @index }}" class="btn btn-sm btn-dark rounded-3 w-100" type="button">Delete</a>
                                 </div>
