CRUD with Database Clear Commit

--- a/views/addProject.hbs
+++ b/views/addProject.hbs
@@ -40,7 +40,7 @@
                     <div class="row">
                         <div class="col">
                             <label class="form-label fw-bolder" for="star-date">Star Date</label>
-                            <input type="date" class="form-control shadow bg-body rounded" name="stardate" id="star-date">
+                            <input type="date" class="form-control shadow bg-body rounded" name="startdate" id="star-date">
                         </div>
                         <div class="col">
                             <label class="form-label fw-bolder" for="end-date">End Date</label>
@@ -81,7 +81,7 @@
                                         Sass
                                     </label>
                                 </div>
-                            </div>
+                            </div> 
                         </div>
                     </div>
                     <div class="mt-3">
