--- a/views/editProject.hbs
+++ b/views/editProject.hbs
@@ -43,11 +43,11 @@
                     <div class="row">
                         <div class="col">
                             <label class="form-label fw-bolder" for="star-date">Star Date</label>
-                            <input type="date" class="form-control shadow bg-body rounded" name="stardate" id="star-date" value="{{ dataProject.stardate }}">
+                            <input type="date" class="form-control shadow bg-body rounded" name="startdate" id="star-date" value="{{ formattedStartDate }}">
                         </div>
                         <div class="col">
                             <label class="form-label fw-bolder" for="end-date">End Date</label>
-                            <input type="date" class="form-control shadow bg-body rounded" name="enddate" id="end-date" value="{{ dataProject.enddate }}">
+                            <input type="date" class="form-control shadow bg-body rounded" name="enddate" id="end-date" value="{{ formattedEndDate}}">
                         </div>
                     </div>
                     <div class="mt-3">
