--- a/views/detailProject.hbs
+++ b/views/detailProject.hbs
@@ -26,14 +26,31 @@
                         <a class="nav-link fw-bold" aria-current="page" href="/detail/{{ dataProject.id }}">Detail {{ dataProject.name }}</a>
                     </li>
                 </ul>
-                  <a type="button" href="/contact" class="btn btn-dark btn-md">Contact</a>
+                <ul class="navbar-nav ml-auto me-4 mb-2 mb-lg-0">
+                        {{#if successLogin }}
+                            <li class="nav-item">
+                                <a class="nav-link fw-bold">Hello, {{ user }}</a>
+                            </li>
+                            <li class="nav-item ms-3">
+                                <a class="nav-link" href="/logout">Logout</a>
+                            </li>
+                        {{else }}
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="/register">Register</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="/login">Login</a>
+                            </li>
+                        {{/if }}
+                    </ul>
+                <a type="button" href="/contact" class="btn btn-dark btn-md">Contact</a>
             </div>
         </div>
     </nav>
     <div class="row mt-5 m-5">
         <h1 class="text-center fw-bold">{{ dataProject.name }}</h1>
         <div class="col-lg-7 col-sm-12 mt-5">
-            <img src="{{ dataProject.imageDefault }}" class="img-fluid w-100" style="height: 450px;" alt="{{ dataProject.imageDefault }}">
+            <img src="{{ dataProject.image }}" class="img-fluid w-100" style="height: 450px;" alt="{{ dataProject.image }}">
         </div>
         <div class="col-lg-5 col-sm-12 mt-5">
             <div class="mx-5">
@@ -41,47 +58,27 @@
                 <div class="d-flex gap-4 align-items-center">
                     <i class="fa-regular fa-calendar-days fa-2x"></i> 
                     <p class="fs-5 mt-3">
-                        {{  dataProject.stardate }} - {{ dataProject.enddate }} 
+                        {{ formattedStartDate }} - {{ formattedEndDate }} 
                     </p>
                 </div>
                 <div class="d-flex gap-4 align-items-center">
                     <i class="fa-regular fa-clock fa-2x"></i>
                      <p class="fs-5 mt-3">
-                         {{ dataProject.vRangeDuration }} {{  dataProject.textDate }}
+                         {{ dataProject.duration }}
                     </p>
                 </div>
             </div>
             <div class="mx-5 mt-5">
                 <h4>Technologies</h4>
                 <div class="row mt-4">
-                    <div class="col-lg-6 col-sm-6">
-                        <div class="d-flex gap-3 align-items-center">
-                            {{#if dataProject.php }}
-                                <i class="fa-brands fa-php fa-2x mx-1"></i>
-                            {{/if }}
-                            <p class="text-secondary fw-bolder mt-2">{{ dataProject.php }}</p>
+                    {{#each icons }}
+                        <div class="col-lg-6 col-sm-6">
+                            <div class="d-flex gap-3 align-items-center">
+                                <i class="fa-brands {{ this.icon }} fa-2x mx-1"></i>
+                                <p class="text-secondary fw-bolder mt-2"> {{ this.name }}</p>
+                            </div>
                         </div>
-                        <div class="d-flex gap-3 align-items-center mt-3">
-                            {{#if dataProject.laravel }}
-                                <i class="fa-brands fa-laravel fa-2x mx-1"></i>
-                            {{/if }}
-                            <p class="text-secondary fw-bolder mt-2">{{ dataProject.laravel }}</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-sm-6">
-                        <div class="d-flex gap-3 align-items-center">
-                            {{#if dataProject.sass }}
-                                <i class="fa-brands fa-sass fa-2x mx-1"></i>
-                            {{/if }}
-                            <p class="text-secondary fw-bolder mt-2">{{ dataProject.sass }}</p>
-                        </div>
-                        <div class="d-flex gap-3 align-items-center mt-3">
-                            {{#if dataProject.python }}
-                                <i class="fa-brands fa-python fa-2x mx-1"></i>
-                            {{/if }}
-                            <p class="text-secondary fw-bolder mt-2">{{ dataProject.python }}</p>
-                        </div>
-                    </div>
+                    {{/each}}
                 </div>
 
             </div>
