--- a/views/addProject.hbs
+++ b/views/addProject.hbs
@@ -49,7 +49,7 @@
     <section class="contact">
         <div class="container mt-4 w-50">
             <div class="row">
-                <form action="/post-project" method="POST">
+                <form action="/post-project" method="POST" enctype="multipart/form-data">
                     <div class="mb-3">
                         <label for="name" class="form-label fw-bolder" for="name">Project Name</label>
                         <input type="name" class="form-control shadow bg-body rounded" name="name" id="name"  placeholder="Enter...">
@@ -104,7 +104,7 @@
                     <div class="mt-3">
                         <label for="image-file" class="form-label fw-bolder">Upload image</label>
                         <div class="input-group mb-3">
-                            <input type="file" class="form-control shadow bg-body rounded"  id="image-file"  aria-describedby="basic-addon1">
+                            <input type="file" class="form-control shadow bg-body rounded" name="image" id="image-file"  aria-describedby="basic-addon1">
                             <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-paperclip"></i></span>
                         </div>
                     </div>
