--- a/views/editProject.hbs
+++ b/views/editProject.hbs
@@ -52,7 +52,7 @@
     <section class="contact">
         <div class="container mt-4 w-50">
             <div class="row">
-                <form action="/update-project/{{ dataProject.id }}" method="POST">
+                <form action="/update-project/{{ dataProject.id }}" method="POST" enctype="multipart/form-data">
                     <div class="mb-3">
                         <label for="name" class="form-label fw-bolder" for="name">Project Name</label>
                         <input type="name" class="form-control shadow bg-body rounded" name="name" id="name" value="{{ dataProject.name }}"  placeholder="Enter...">
@@ -105,9 +105,9 @@
                         </div>
                     </div>
                     <div class="mt-3">
-                        <label for="image-file" class="form-label fw-bolder">Upload image</label>
+                        <label for="image-file" class="form-label fw-bolder">Upload image {{ dataProject.image }}</label>
                         <div class="input-group mb-3">
-                            <input type="file" class="form-control shadow bg-body rounded"  id="image-file"  aria-describedby="basic-addon1">
+                            <input type="file" class="form-control shadow bg-body rounded" name="image" id="image-file"  value=""  aria-describedby="basic-addon1">
                             <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-paperclip"></i></span>
                         </div>
                     </div>
