--- a/views/index.hbs
+++ b/views/index.hbs
@@ -107,6 +107,7 @@
                 </div>
             </div>
         </nav>
+      
         <div class="card" style="background-color: #e1e5e9;">
             <div class="card-body mt-4">
                 <div class="card shadow p-3 mb-5 bg-body rounded mt-5 mx-5">
@@ -143,9 +144,20 @@
                             </div>
                             <div class="col-lg-4 col-sm-12 d-flex justify-content-center">
                                 <div class="card mt-3 mx-3 w-100 shadow p-3 mb-5 bg-body rounded">
+                                    {{!-- {{#if successLogin }}
+                                        <img src="assets/image/foto.jpg" class="card-img-top" style="height: 320px;" alt="...">
+                                    {{else }}
+                                    {{/if }} --}}
                                     <img src="assets/image/foto.jpg" class="card-img-top" style="height: 320px;" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title text-center ">Rinaldi Rizqi Fauzi</h5>
+                                        {{!-- {{#if successLogin }}
+                                            <h5 class="card-title text-center ">
+                                                    {{ profileFirstName }} {{ profileSecondName }}
+                                            </h5>
+                                        {{else }}
+                                            <h5 class="card-title text-center"> Log in and complete your profile</h5>
+                                        {{/if }} --}}
+                                        <h5 class="card-title text-center">Rinaldi Rizqi Fauzi</h5>
                                         <p class="card-text text-center ">Fullstack Developer</p>
                                     </div>
                                 </div>
@@ -164,7 +176,7 @@
                     {{#each data}}
                         <div class="col">
                             <div class="card shadow p-3 mb-5 bg-body rounded mx-4">
-                                <img src="{{ image }}" class="card-img-top" style="height: 260px;" style="height: 260px;" alt="...">
+                                <img src="assets/image/{{ this.image }}" class="card-img-top"  style="height: 260px;" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">{{ name }}</h5> 
                                     <p class="fst-italic fs-6 float-end"> {{ Profile.first_name  }} {{ Profile.second_name }} </p>
