edit & update profile clear commit

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -135,7 +135,7 @@
                                     </ul>
                                 </div>
                                 <div class="mx-5 mt-5">
-                                    <a href="" class="btn btn-md btn-secondary rounded-5 float-end">Edit Your Profile</a>
+                                    <a href="/edit-profile/{{ userID }}" class="btn btn-md btn-secondary rounded-5 float-end">Edit Your Profile</a>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-sm-12 d-flex justify-content-center">
